feat: Remove Wimoor → Golang migration assessment document
docs: Add Wimoor containerized testing guide

fix: Increase max file upload size in Nacos configuration for wimoor-erp

fix: Update FileUpload logic to handle media paths correctly

fix: Change Druid logging filter from log4j to slf4j

fix: Update MyStringJsonSerializer to handle additional fields for image serialization

feat: Enhance MaterialMediaController to associate uploaded media with materials

fix: Modify syncMaterialImage method to store media ID instead of URL in material image field