@@ -107,3 +107,110 @@
 - 改共享契约前，先用完整 endpoint 路径和 DTO 字段同时搜索后端与 `wimoorui/src/api`。
 - 改数据库时，同步维护 `init-config/mysql/数据库结构/` 下的结构 SQL；需要初始化或字典数据时同步维护 `init-config/mysql/数据/`。
 - 改鉴权、菜单或权限时，把 Gateway Redis key、Admin 菜单接口、前端动态路由、`v-hasPerm` 使用视为一条链路一起验证。
+
+## 测试规约（强制）
+
+### 核心原则
+
+1. **所有测试必须在 Docker 容器中进行**，严禁在 macOS 宿主机上直接运行 Java 服务测试。
+2. **严禁使用操作系统绝对路径**（如 `/logs`、`/tmp/data`）作为应用配置；必须使用项目相对路径或容器内约定路径（如 `/logs/${APP_NAME}`）。
+3. **严禁使用 `sudo` 在宿主机上创建目录来适配容器内路径**——如果容器启动报路径不存在，修复 Dockerfile 或 entrypoint，而非修改宿主机。
+
+### Docker 容器测试方法
+
+#### 基础设施启动
+
+```bash
+cd deploy
+docker compose up -d  # 启动 MySQL、Redis、Nacos、Gateway 等基础设施
+```
+
+#### 单服务构建与部署
+
+```bash
+# 1. 构建 jar（在项目根目录）
+mvn -pl wimoor-erp/erp-boot -am -DskipTests package -q
+
+# 2. 复制 jar 到 deploy 目录
+cp wimoor-erp/erp-boot/target/erp-boot.jar deploy/app.jar
+
+# 3. 构建 Docker 镜像
+docker build -f deploy/Dockerfile.service -t wimoor-erp:latest .
+
+# 4. 启动容器
+docker run -d --name wimoor-erp \
+  --network deploy_wimoor-net \
+  -p 8101:8101 \
+  -e NACOS_SERVER_ADDR=wimoor-nacos:8848 \
+  -e NACOS_NAMESPACE=public \
+  -e APP_NAME=wimoor-erp \
+  -e JAVA_OPTS="-Xms256m -Xmx768m \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
+    --add-opens=java.base/java.util=ALL-UNNAMED \
+    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED" \
+  wimoor-erp:latest
+```
+
+#### 健康检查
+
+```bash
+# 等待启动后检查容器状态
+docker inspect wimoor-erp --format '{{.State.Status}} restarts={{.RestartCount}}'
+
+# 检查 Nacos 注册
+curl -s "http://localhost:8848/nacos/v1/ns/instance/list?serviceName=wimoor-erp"
+
+# 端口探活
+curl -s -o /dev/null -w "%{http_code}" http://localhost:8101/erp/api/v1/...
+```
+
+#### 查看日志
+
+```bash
+# 控制台日志（仅 bootstrap 阶段）
+docker logs wimoor-erp
+
+# 应用运行时日志（logback 输出到文件）
+docker exec wimoor-erp cat /logs/wimoor-erp/log.log | tail -50
+```
+
+### API 测试方法
+
+- 通过 Gateway（端口 8099）测试：模拟真实前端调用路径，含鉴权和路由
+- 通过服务直连端口测试：绕过 Gateway，适合开发阶段快速验证
+
+```bash
+# 1. 获取登录 token（通过 Gateway）
+curl -X POST http://localhost:8099/admin/api/v1/oauth/token \
+  -H "Content-Type: application/json" \
+  -d '{"account":"admin@wimoor.com","password":"wimoor123"}'
+
+# 2. 带 session 调用 API
+curl -H "Cookie: jsessionid=<token>" http://localhost:8099/erp/api/v1/material/media/pool?shopid=xxx
+```
+
+### 常见陷阱与解决
+
+| 问题 | 原因 | 解决 |
+|------|------|------|
+| 容器启动后立即退出 exit=1 | 通常是 bean 初始化异常，logback 只写文件不打控制台 | 用 `--entrypoint sh` + `2>&1` 捕获全部输出 |
+| `NoClassDefFoundError: org/apache/log4j/Priority` | Druid filters 配置了 `log4j` 但 classpath 缺少 log4j-1.2.x | 改 `druid.properties` 的 `druid.filters=stat,slf4j` |
+| Docker 内存不足容器被 OOM 杀 | Docker Desktop VM 总内存有限，多服务累计超限 | 停止不相关容器；减小 `-Xmx`；`docker stats` 监控 |
+| `druid.properties` 读取位置 | `@PropertySource("classpath:druid.properties")` 在 `common-mybatis` 模块中 | 优先修改 `wimoor-common/common-mybatis/src/main/resources/druid.properties` |
+| Nacos 配置加载顺序 | bootstrap.yml → Nacos (wimoor-common, wimoor-commom-ext, wimoor-erp) → application | 注意 typo "commom"（不是 common） |
+
+### Docker 网络约定
+
+- 所有服务容器必须加入 `deploy_wimoor-net` 网络
+- 服务间通过容器名解析（如 `wimoor-mysql`、`wimoor-nacos`、`wimoor-redis`）
+- 宿主机通过 `localhost:端口` 访问映射端口
+
+### 前端测试
+
+```bash
+# 在 wimoorui/ 下
+cd wimoorui && npm install && npm run dev
+# 浏览器访问 http://localhost:8084
+# API 自动代理到 http://localhost:8099 (Gateway)
+```
